Rename GET /todos into GET /todo
