# src/main/resources/static/openapi.yml
@@ -10,6 +10,31 @@ servers:
     description: local server
 paths:
   /todos:
+    delete:
+      summary: >-
+        Delete the todos with the selected status, by default the completed
+        todos
+      operationId: deleteTodosByStatus
+      x-@id: http://evolvable-by-design.github.io/vocabs/todomvc#deleteManyTodos
+      tags:
+        - todo
+      parameters:
+        - name: status
+          in: query
+          description: The status expected for the queried todos
+          x-@id: http://evolvable-by-design.github.io/vocabs/todomvc#status
+          required: false
+          schema:
+            type: string
+            enum:
+              - all
+              - completed
+              - active
+            default: completed
+      responses:
+        '204':
+          description: Confirmation
+  /todo:
     get:
       summary: Get all the todos
       operationId: listTodos
@@ -41,31 +66,6 @@ paths:
               $ref: '#/components/links/createTodo'
             deleteMany:
               $ref: '#/components/links/deleteMany'
-    delete:
-      summary: >-
-        Delete the todos with the selected status, by default the completed
-        todos
-      operationId: deleteTodosByStatus
-      x-@id: http://evolvable-by-design.github.io/vocabs/todomvc#deleteManyTodos
-      tags:
-        - todo
-      parameters:
-        - name: status
-          in: query
-          description: The status expected for the queried todos
-          x-@id: http://evolvable-by-design.github.io/vocabs/todomvc#status
-          required: false
-          schema:
-            type: string
-            enum:
-              - all
-              - completed
-              - active
-            default: completed
-      responses:
-        '204':
-          description: Confirmation
-  /todo:
     post:
       summary: Create a new todo
       operationId: createTodo
